[BUGFIX] Remove button group in image-cropper
If labels on the crop buttons are too long or if there are more
buttons then the btn-group breaks the view.

Resolves: #69991
Releases: master
Reviewed-on: https://review.typo3.org/43453
Tested-by: Andreas Bouche <andreas.bouche@flagbit.de>
Tested-by: Stefan Neufeind <typo3.neufeind@speedpartner.de>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -9217,6 +9217,9 @@ iframe,
   max-width: none!important;
   max-height: none!important;
 }
+.ratio-buttons .btn.btn-default {
+  margin-bottom: 5px;
+}
 .typo3-csh-inline {
   padding: 4px;
 }
